# notion_performance_summaries

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  config.py  file_operations.py  notion_api.py  notion_summaries.py  preferences.example.json  preferences.py  pyproject.toml  setup.py
.github/: copilot-instructions.md
notion_performance_summaries/: config.py  data_processing.py  file_operations.py  notion_api.py  notion_summaries.py  preferences.example.json  preferences.py
tests/: test_preferences.py
