[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-performance-summaries"
version = "0.1.0"
authors = [
  { name="Gabriel Rojas", email="gabriel.rojas@ucsf.edu" },
]
description = "Generate performance summaries for chipmunk using matlab and labdata-tools and upload them to Notion"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]

[project.scripts]
notion_summaries = "notion_performance_summaries.notion_summaries:cli"

[project.urls]
"Homepage" = "https://github.com/rojasgabriel/notion_performance_summaries"
"Bug Tracker" = "https://github.com/rojasgabriel/notion_performance_summaries/issues"
